--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
     }
     header {
       background-color: #1f1f1f;
-      padding: 1.5rem;
+      padding: 2rem 1rem;
       text-align: center;
+    }
+    header img {
+      border-radius: 50%;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      margin-bottom: 1rem;
     }
     header h1 {
       margin: 0;
@@ -24,11 +31,18 @@
       display: flex;
       justify-content: center;
       gap: 2rem;
-      margin-top: 1rem;
+      margin-top: 1.5rem;
+      flex-wrap: wrap;
     }
     nav a {
       color: #00ffcc;
       text-decoration: none;
+      font-weight: bold;
+      padding: 0.3rem 0.5rem;
+    }
+    nav a.cv-link {
+      
+      border-radius: 0.5rem;
     }
     section {
       max-width: 900px;
@@ -53,10 +67,17 @@
       background-color: #1f1f1f;
       margin-top: 2rem;
     }
+    @media (max-width: 600px) {
+      nav {
+        flex-direction: column;
+        gap: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
+    <img src="Toufek Hasan.jpg" alt="S.M. Toufek Hasan" />
     <h1>S.M. Toufek Hasan</h1>
     <p>Junior Penetration Tester | WordPress Expert | Cybersecurity Enthusiast</p>
     <nav>
@@ -65,8 +86,10 @@
       <a href="#projects">Projects</a>
       <a href="#certifications">Certifications</a>
       <a href="#contact">Contact</a>
+      <a href="Toufek_Hasan_cv.pdf" class="cv-link" download>Download CV</a>
     </nav>
   </header>
+
   <section id="about">
     <h2>About Me</h2>
     <p>I am a passionate cybersecurity professional with experience in ethical hacking, penetration testing, WordPress development, and bug bounty hunting. With training and internship experience, I aim to help clients secure their systems and grow their online presence. I run a YouTube channel and Facebook page under the brand "VulnHunt."</p>
